--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
   font-family: 'Poppins', sans-serif;
 
-  background-image: url("/assets/bg-intro-mobile.png");
+  background-image: url("./assets/bg-intro-mobile.png");
   background-color: hsl(0, 100%, 74%);
 
   max-width: 37.5rem;
